--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,15 @@
   "manifest_version": 2,
   "name": "VRV Next Button",
   "short_name": "VrvNextButton",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "content_scripts": [
     {
-      "matches": ["https://static.vrv.co/*"],
-      "js": ["index.js"],
+      "matches": [
+        "https://static.vrv.co/*"
+      ],
+      "js": [
+        "index.js"
+      ],
       "all_frames": true
     }
   ],
